--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "invariant": "^2.2.4",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^8.2.1",
